# demented-alkalisable-chameleon-nloptrbundled

./: DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac  configure.win
R/: auglag.R  ccsaq.R  check.derivatives.R  cobyla.R  direct.R  global.R  gradients.R  is.nloptr.R  lbfgs.R  mlsl.R  mma.R  nloptions.R  nloptr.R  nloptr.get.default.options.R  nloptr.print.options.R  nloptrbundled-package.R  nm.R  slsqp.R  tnewton.R  varmetric.R  zzz.R
inst/doc/: nloptr.R  nloptr.Rmd  nloptr.html
inst/tinytest/: test-Rosenbrock-banana.R  test-check.derivatives.R  test-derivative-checker.R  test-example.R  test-gradients.R  test-hs023.R  test-hs071.R  test-is.nloptr.R  test-nloptions.R  test-nloptr.R  test-nloptr.add.default.options.R  test-nloptr.print.options.R  test-options-maxtime.R  test-parameters.R  test-print.nloptr.R  test-simple.R  test-systemofeq.R  test-wrapper-auglag.R  test-wrapper-ccsaq.R  test-wrapper-cobyla.R  test-wrapper-direct.R  test-wrapper-global.R  test-wrapper-lbgfs.R  test-wrapper-mlsl.R  test-wrapper-mma.R  test-wrapper-nm.R  test-wrapper-slsqp.R  test-wrapper-tnewton.R  test-wrapper-varmetric.R
man/: check.derivatives.Rd  nloptr.Rd  nloptr.print.options.Rd  nloptrbundled-package.Rd
src/: Makevars  init_nloptr.c
src/libs/: CMakeLists.txt
src/libs/src/algs/cobyla/: cobyla.c
tests/: tinytest.R
tools/: cmake_call.sh  r_config.sh
